--- a/src/topic/README
+++ b/src/topic/README
@@ -1,6 +1,4 @@
 The topic sensitive code is a different codebase.
 
-To run code in this folder, you will need python3.4, with scipy, numpy, and h5py installed.
-
-To run pagerank.py, you will also need to download the newpagelinks_list.h5 and newid2title.pickle from: https://www.dropbox.com/sh/jognpchr03zdog3/AABLIbLmQvdoSdXDmmHPZbM3a?dl=0
-To run data.py, you will need Daylen's title_id_dict.txt and my pagelinks_list.h5.
+To run data.py, you will need title_id_dict.txt (generated with convert.py) and categorylinks.csv, which you can download here: https://www.dropbox.com/sh/jognpchr03zdog3/AABLIbLmQvdoSdXDmmHPZbM3a?dl=0. The csv file should be in this folder.
+The topic sensitive pagerank code is in pagerank.py.
